--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,18 @@ buildscript {
         classpath "com.android.tools.build:gradle:4.1.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
+        classpath "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:1.18.1"
+    }
+}
+
+allprojects {
+    apply from: "$rootDir/detekt.gradle"
+    repositories {
+        google()
+        jcenter()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
 }
 
@@ -67,13 +79,6 @@ ext {
         kotlinOptions {
             jvmTarget = '1.8'
         }
-    }
-}
-
-allprojects {
-    repositories {
-        google()
-        jcenter()
     }
 }
 
