--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,4 @@ dependencies {
 
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     implementation "androidx.fragment:fragment-ktx:$fragmentVersion"
-    implementation "com.google.android.material:material:$materialVersion"
-    implementation "android.arch.navigation:navigation-fragment-ktx:$navigationVersion"
-    implementation "android.arch.navigation:navigation-ui-ktx:$navigationVersion"
-}
+    implementation "com.google.android.material:material:$materialVersion"}
