--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,6 @@
 buildscript {
     ext{
         kotlin_version = "1.5.31"
-        navigationVersion = "2.3.5"
     }
     repositories {
         google()
@@ -11,7 +10,6 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
         classpath "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:1.18.1"
     }
 }
@@ -41,6 +39,8 @@ ext {
     gsonConverterVersion = "2.5.0"
     swipeRefreshLayoutVersion = "1.1.0"
     pagingVersion = "3.0.1"
+    lottieVersion = "4.2.0"
+    composeVersion = "1.0.4"
 }
 
 ext {
