--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     api project(':core')
     implementation project(':lib-navigation')
     implementation project(':feature-trending')
+    implementation project(':feature-login')
     implementation project(':feature-search')
     implementation project(':feature-splash')
 
