--- a/core/build.gradle
+++ b/core/build.gradle
@@ -8,6 +8,9 @@ android androidConfiguration
 
 dependencies {
     api project(':lib-data')
+    api project(':lib-authentication')
+    api project(':lib-utils')
+
 
     implementation 'io.coil-kt:coil-base:1.3.2'
     implementation "com.google.dagger:dagger:$daggerVersion"
