--- a/settings.gradle
+++ b/settings.gradle
@@ -9,3 +9,6 @@ include ':core'
 include ':app'
 rootProject.name = "LFilms"
 include ':feature-splash'
+include ':feature-login'
+include ':lib-authentication'
+include ':lib-utils'
