--- a/settings.gradle
+++ b/settings.gradle
@@ -12,3 +12,5 @@ include ':feature-splash'
 include ':feature-login'
 include ':lib-authentication'
 include ':lib-utils'
+include ':lib-trending'
+include ':feature-home'
